@@ -21,10 +21,18 @@ connector = PostgresConnector(
 loader = Loader(connector)
 extract = Extract(connector)
 
+job = Job(
+        job_id=None,
+        job_name="test_job",
+        table_name="table_test",
+        last_compute=date.today().strftime("%Y-%m-%d, %H:%M:%S")
+    )
 
 @pytest.fixture(scope="module", autouse=True)
 def cleanup():
     logger.info("Setup  before tests")
+    loader.delete_table()
+    loader.create_table()
     yield
     loader.close()
     logger.info("After Tests")
@@ -33,14 +41,35 @@ def test_load_job():
     """
     it should be able to upsert a station data
     """
-    job = Job(
+    jobs = iter([job])
+    loader.upsert_records(jobs)
+    records = list(extract.fetch_data())
+    assert len(records) == 1
+    job_read = records[0]
+    assert job_read[1] == job.job_name
+    assert job_read[2] == job.table_name
+    assert job_read[3] == job.last_compute
+
+def test_load_job_twice():
+    """
+    it should be able to upsert a station data
+    """
+    job2 = Job(
         job_id=None,
         job_name="test_job",
         table_name="table_test",
-        last_compute=date.today().strftime("%Y-%m-%d")
+        last_compute=date.today().strftime("%Y-%m-%d, %H:%M:%S")
     )
-    jobs = iter([job])
-    loader.upsert_records(jobs)
+    loader.upsert_records(iter([job]))
+    loader.upsert_records(iter([job2]))
     records = extract.fetch_data()
-    assert len(records) == 1
-    loader.close()
+    assert len(list(records)) == 1
+
+def test_parse_job():
+    records = extract.fetch_data()
+    jobs = list(extract.parse_data(records))
+    assert len(jobs) == 1
+    job_fetch = jobs[0]
+    assert job_fetch.job_name == job.job_name
+    assert job_fetch.table_name == job.table_name
+    assert job_fetch.last_compute == job.last_compute
